--- a/src/index.scss
+++ b/src/index.scss
@@ -155,3 +155,11 @@ header {
         }
     }
 }
+
+.basket {
+    transform: translateY(0px);
+    transition: transform 0.1s ease-in-out;
+    &:hover {
+        transform: translateY(-8px);
+    }
+}
