--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,27 @@
 .App {
     text-align: center;
 }
+
+ul {
+    list-style: none;
+}
+
+li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.delete {
+    cursor: pointer;
+    color: red;
+}
+
+button {
+    cursor: pointer;
+}
+
+input:checked+span {
+    text-decoration: line-through;
+}
