--- a/src/index.scss
+++ b/src/index.scss
@@ -46,11 +46,14 @@ header {
     border: 1px solid;
     border-radius: 10px;
     padding: 0 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     input {
         border: 0;
         padding: 13px;
         font-size: 16px;
-        width: 200px;
+        width: 300px;
     }
 }
 
